--- a/style/css/index.css
+++ b/style/css/index.css
@@ -6,10 +6,11 @@ body{
     width: 100%;
     height: 100%;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 #home {
-  background-image: url("../images/homeBackground.jpg");
+  background-color: rgb(162, 66, 240);
 }
 
 .container {
@@ -59,7 +60,7 @@ body{
     text-shadow: 1px 0px 1px #313131;
       
     color:#313131;
-    font-size: 130px;
+    font-size: 60px;
     font-weight: 200;
     -webkit-animation:colorchange 4s infinite alternate;
   }
